--- a/application.properties
+++ b/application.properties
@@ -1,8 +1,8 @@
 #Grails Metadata file
-#Mon May 10 17:34:23 CDT 2010
-app.grails.version=1.2.2
+#Mon May 24 20:11:11 EDT 2010
+app.grails.version=1.3.1
 app.name=FreeBeerApp
 app.servlet.version=2.4
 app.version=0.1
-plugins.hibernate=1.2.2
-plugins.tomcat=1.2.2
+plugins.hibernate=1.3.1
+plugins.tomcat=1.3.1
